@@ -47,9 +47,9 @@ dectorio-vanilla-hazard-concrete-style=When enabled, Painted Hazard concrete wil
 dectorio-landscaping-blueprintable=When enabled, blueprints will include landscaping features as tiles
 dectorio-painted-concrete-speed-modifier=Modifies the default walking and vehicle speed for Painted concrete by this amount (1 = no change to speed (default), 0.75 = 75% of default speed, 0.5 = 50% of default speed)
 dectorio-decorative-removal-probability=The probability that decorations, such as bushes and grasses, are removed when flooring tiles are placed (1 = 100% are removed (default), 0.5 = 50%, 0 = none are removed)
-dectorio-flooring-stack-size=The number of flooring items that can be stacked in one inventory slot (default = 500)
-dectorio-landscaping-stack-size=The number of landscaping items that can be stacked in one inventory slot (default = 500)
-dectorio-walls-stack-size=The number of walls that can be stacked in one inventory slot (default = 200)
+dectorio-flooring-stack-size=The number of flooring items that can be stacked in one inventory slot (default = 100)
+dectorio-landscaping-stack-size=The number of landscaping items that can be stacked in one inventory slot (default = 100)
+dectorio-walls-stack-size=The number of walls that can be stacked in one inventory slot (default = 100)
 dectorio-waterfill-tiles=If waterfill is enabled, this specifies which water tiles are available for placement
 
 [dect-notify]
