@@ -5,6 +5,7 @@ Date: 24. 11. 2020
     - Support for Factorio 1.1
   Changed:
     - Re-ordered signal colours to maintain vanilla priority order (thanks to dbiser99)
+    - Stack sizes for flooring, landscaping and wall items now reflect vanilla stack sizes as these cause unintended balance issues in larger modpacks. The stack sizes can still be configured in mod settings.
   Removed:
     - Support for Factorio 1.0 (use Dectorio version 0.11.1 instead)
     - Signs (use Industrial Display Plates or Text Plates as a replacement)
